generate OTP overlap resolved

--- a/src/components/PhoneNumberAuth/PhoneNumberAuthPresenter.scss
+++ b/src/components/PhoneNumberAuth/PhoneNumberAuthPresenter.scss
@@ -73,3 +73,14 @@
     }
   }
 }
+
+.authpage {
+  ion-content {
+    position: relative;
+    z-index: 99;
+  }
+  ion-footer {
+    position: relative;
+    z-index: 9;
+  }
+}
